全新配置，更好入手

--- a/public/styles/common.styl
+++ b/public/styles/common.styl
@@ -7,5 +7,8 @@ body {
 }
 
 body div {
-  background-image: url("~@views/index/img.jpg")
+  width 300px
+  height 200px
+  background-size: 100%
+  background-image: url("~@assets/images/img.jpg")
 }
