--- a/views/index.html
+++ b/views/index.html
@@ -4,9 +4,12 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
-  <title>Detail</title>
+  <title>entry</title>
 </head>
 <body>
-  <h1>This Is Detail Page</h1>
+  <h1>This is entry page</h1>
+  <a href="./news/index.html">去 News 页面</a><br>
+  <a href="./about/index.html">去 About 页面</a><br>
+  <a href="./contact/index.html">去 Contact 页面</a><br>
 </body>
 </html>
