--- a/views/news/index.html
+++ b/views/news/index.html
@@ -4,10 +4,10 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
-  <title>About</title>
+  <title>News</title>
 </head>
 <body>
-  <h1>About Page</h1>
-  <a href="/">回首页</a>
+  <h1>This Is News Page</h1>
+  <a href="./list/index.html">去 List 页面</a>
 </body>
 </html>
