--- a/views/news/list/detail/index.html
+++ b/views/news/list/detail/index.html
@@ -4,9 +4,10 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
-  <title>Home</title>
+  <title>Detail</title>
 </head>
 <body>
-  <h1>Home Page</h1>
+  <h1>This Is Detail Page</h1>
+  <a href="/">回首页</a>
 </body>
 </html>
