--- a/views/contact/index.html
+++ b/views/contact/index.html
@@ -4,9 +4,10 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
-  <title>List</title>
+  <title>Contact</title>
 </head>
 <body>
-  <h1>This Is List Page</h1>
+  <h1>Contact Page</h1>
+  <a href="/">回首页</a>
 </body>
 </html>
