添加公共模板、CDN

--- a/views/contact/index.html
+++ b/views/contact/index.html
@@ -7,6 +7,11 @@
   <title>Contact</title>
 </head>
 <body>
+
+  <!-- 不一定非要 .ejs 后缀才可以引入公共模板 -->
+  ${require("@template/header.html")}
+  <p>不一定非要 .ejs 后缀才可以引入公共模板</p>
+
   <h1>Contact Page</h1>
   <a href="/">回首页</a>
 </body>
