--- a/views/about/index.ejs
+++ b/views/about/index.ejs
@@ -4,12 +4,11 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
-  <title>entry</title>
+  <title>About</title>
 </head>
 <body>
-  <h1>This is entry page</h1>
-  <a href="./news/index.html">去 News 页面</a><br>
-  <a href="./about/index.html">去 About 页面</a><br>
-  <a href="./contact/index.html">去 Contact 页面</a><br>
+  <%= require("@template/header.html") %>
+  <h1>About Page</h1>
+  <a href="/">回首页</a>
 </body>
 </html>
